--- a/src/components/Section/index.css
+++ b/src/components/Section/index.css
@@ -37,3 +37,9 @@
 .Section .box:first-child {
   margin-top: 0;
 }
+
+@media (max-width: 992px) {
+  .leftSide, .rightSide {
+    display: none;
+  }
+}
