--- a/src/components/Section/Post/index.css
+++ b/src/components/Section/Post/index.css
@@ -18,14 +18,18 @@
   color: #fff;
   font-size: 12px;
   background-color: rgba(0,0,0,.6);
-  padding: 1px;
+  padding: 1px 5px;
 }
 
 .Post .imgBox span:before{
-  content: "\F1DB";
+  content: "\F02B";
   font-family: fontAwesome;
   margin-right: 5px;
   font-size: 10px;
+}
+
+.Post__footer.table {
+  margin: 0;
 }
 
 .Post .infoBox .table-cell {
@@ -43,6 +47,7 @@
 }
 
 .Post .infoBox__title {
+  display: inline-block;
   color: #555;
   margin: 0;
   letter-spacing: -.3px;
@@ -50,6 +55,7 @@
 }
 
 .Post .infoBox__time {
+  display: block;
   font-size: 12px;
   color: #9e9e9e;
   letter-spacing: -.5px;
@@ -77,11 +83,21 @@
 .Post__footer .fa {
   text-align: center;
   width: 20px; height: 20px;
+  line-height: 20px;
   vertical-align: middle;
+}
+
+.Post__footerIconText {
+  margin-left: 5px;
+}
+
+.Post__footer .table-cell a {
+  transition: .3s;
 }
 
 .Post__footer .table-cell:nth-child(1) {
   text-align: left;
+  width: 25%;
 }
 
 .Post__footer .table-cell:nth-child(1) a {
@@ -92,6 +108,7 @@
 
 .Post__footer .table-cell:nth-child(2) {
   text-align: center;
+  width: 50%;
 }
 
 .Post__footer .table-cell:nth-child(2) a {
@@ -100,8 +117,14 @@
   color: #fff;
   margin: 5px;
 }
+
+.Post__footer .table-cell:nth-child(2) a:hover {
+  background-color: #ff7043;
+}
+
 .Post__footer .table-cell:nth-child(3) {
   text-align: right;
+  width: 25%;
 }
 
 .Post__footer .table-cell:nth-child(3) a {
