--- a/src/components/Register/index.css
+++ b/src/components/Register/index.css
@@ -21,6 +21,10 @@
   text-align: center;
 }
 
+.Register .m-rLink {
+  margin-right: 5px;
+}
+
 .Register .d-B {
   display: block;
   text-align: center;
@@ -69,5 +73,13 @@
   margin-top: 20px;
   background-color: #ff7043;
   color: #fff;
+}
+
+@media (max-width: 400px) {
+  .RegisterForm input[type="input"], 
+  .RegisterForm input[type="password"],
+  .RegisterForm input[type="submit"] {
+    padding: 10px 20px;
+  }
 }
 
