--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,6 +2,12 @@
   text-decoration: none;
 }
 
+.Header .bottomline {
+  border-bottom: 1px solid #eee;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+
 .Header {
   position: relative;
   background-color: #232f42;
@@ -10,6 +16,7 @@
   animation-name: fade-in-header;
   animation-duration: 1s;
   animation-fill-mode: forwards;
+  z-index: 50;
 }
 
 .Header .logo {
@@ -93,12 +100,20 @@
 }
 
 .Header .authArea__item {
-  float: left;
-  padding: 10px;
+  position: relative;
+  display: block;
   color: #637289;
+  padding: 10px;
+  cursor: pointer;
 }
 
-.Header .authArea__item:hover {
+.Header .authAreaItemBox {
+  position: relative;
+  float: left;
+  display: inline-block;
+}
+
+.Header .authAreaItemBox:hover .authArea__item {
   color: #fff;
 }
 
@@ -117,7 +132,6 @@
   border-radius: 50%;
 }
 
-
 .HeaderBox {
   position: relative; display: inline-block; vertical-align: middle;
 }
@@ -133,6 +147,49 @@
 .Headertoggle {
   display: none;
 }
+/*//////////////////////////////////////////////////////////*/
+/*HEADER ITEM POPUP BOX - HOVER BOX*/
+.headerItemMoreBox {
+  position: absolute;
+  display: none;
+  min-width: 320px; min-height: 200px;
+  top: 100%; right: 10%;
+  z-index: 100;
+  color: #000;
+  background-color: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  border-radius: 5px;
+  animation-name: fade-in;
+  animation-duration: .3s;
+  animation-fill-mode: forwards;
+}
+
+.headerItemMoreBox.padding {
+  padding: 10px;
+}
+
+@keyframes fade-in {
+  0% { opacity: 0; transform: translateY(10%);}
+  100% { opacity: 1; transform: translateY(0%);}
+}
+
+.headerItemMoreBox::before {
+  position: absolute;
+  font-family: fontAwesome;
+  content: "\F0D8";
+  color: #fff;
+  top: -5px;
+  right: 5px;
+  line-height: 0px;
+  font-size: 26px;
+  color: #ff7043;
+}
+
+.authAreaItemBox:hover .headerItemMoreBox {
+  display: block;
+}
+/*HEADER ITEM POPUP BOX - HOVER BOX*/
+/*//////////////////////////////////////////////////////////*/
 
 @media (max-width: 992px) {
   .HeaderBox {
